--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -4,12 +4,13 @@
 	xmlns:controls="vdom.containers.*"
 	xmlns:main="vdom.components.main.*"
 	xmlns:createApplication="vdom.components.createApplication.*"
+	xmlns:applicationProperties="vdom.components.applicationProperties.*"
 	
 	creationComplete="creationCompleteHandler();"
 	show="showHandler();"
 	hide="hideHandler();" 
 	
-	creationPolicy="all">
+	creationPolicy="all" >
 	
 <mx:Script source="includes/applicationManagment.as" />
 
@@ -27,7 +28,7 @@
 		horizontalAlign="left" verticalAlign="middle"
 		horizontalGap="5" borderStyle="solid" borderColor="#000000">
 		
-		<controls:ActionButton styleName="newsButton"
+		<controls:ActionButton styleName="newButton"
 			label="{resourceManager.getString('Application','main_new')}"
 			labelPlacement="bottom"
 			click="mainViewStack.selectedChild = createApplicationCanvas"/>
@@ -68,7 +69,11 @@
 			dropShadowEnabled="true" borderStyle="solid"  borderColor="#000000">
 		<main:Main id="mainCanvas" styleName="mainCanvas" width="100%" height="100%" 
 			borderStyle="none"/>
-		<createApplication:CreateApplication id="createApplicationCanvas" width="100%" height="100%" />
+		<createApplication:CreateApplication id="createApplicationCanvas"
+			width="100%" height="100%" />
+		
+		<applicationProperties:applicationProperties id="applicationProperties" 
+			width="100%" height="100%" />
 	</mx:ViewStack>
 	
 </mx:VBox>
