same change in EventEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1888 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -67,7 +67,7 @@
 					
 			</containers:ClosablePanel>
 			-->
-			<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="200" height="100%" /> 					
+			<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" height="100%" /> 					
 			
 		</mx:VBox>
 	</mx:HDividedBox>
