--- a/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
@@ -22,8 +22,8 @@
 				_applicationTitleList.dataProvider = _dataProvider = listApplication;
 				_applicationTitleList.selectedIndex = 0;
 				
-				var evt:ListEvent = new ListEvent('applicationChanged');
-				dispatchEvent(evt);
+//				var evt:ListEvent = new ListEvent('applicationChanged');
+//				dispatchEvent(evt);
 			}
 			
 			public function get applicationID():String {
@@ -44,7 +44,7 @@
 			
 		]]>
 	</mx:Script>
-	<mx:TileList id="_applicationTitleList" 
+	<mx:TileList id="_applicationTitleList"
 		selectedIndex="0" change="changeListEvent()"
 		verticalScrollPolicy="auto" paddingRight="15" paddingLeft="5"
 		itemRenderer="vdom.containers.Thumbnail" rowCount="1" direction="horizontal" columnCount="4"
