--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -14,9 +14,10 @@
 	 	 *  + перенести вниз дерево евентов/акшинов 
 	 	 *  + удалени елементов
 	 	 *  + чтоб серыми становились вынесенные евенты
-	 	 *  - при удаление евента в дереве востанавливались евенты...
+	 	 *  + при удаление евента в дереве востанавливались евенты...
 	 	 *  + запоминание состояния
 	 	 *  - у акшина редактировались параметры
+	 	 *  - посылать на сервер измененные параметры у акшинов
 	 	 * 
 	 	 * */
 	 	 
@@ -55,6 +56,9 @@
 	 			BindingUtils.bindProperty(trContainer, 'dataProvider', dataManager, 'listPages')
 	 			trContainer.showHandler();
 	 			trContainer.addEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
+	 			
+	 			curContainerID = dataManager.currentPageId;
+	 			curContainerTypeID = dataManager.getTypeByObjectId(curContainerID).Information.ID.toString();
 	 		}
 	 		
 	 		private function hideHandler():void
@@ -71,7 +75,7 @@
 	 			dataChanged = false;
 	 			
 	 			dataManager.addEventListener(DataManagerEvent.APPLICATION_EVENT_LOADED, applicationEvenLoadedHandler);
-	 			trace('get: '+ eeEvt.objID);
+	 			//trace('get: '+ eeEvt.objID);
 	 			dataManager.getApplicationEvents(eeEvt.objID);
 	 			
 	 			trEvents.dataProvider  = eeEvt.data;
@@ -81,7 +85,7 @@
 	 		private function applicationEvenLoadedHandler(dmEvt:DataManagerEvent):void
 	 		{
 	 			dataManager.removeEventListener(DataManagerEvent.APPLICATION_EVENT_LOADED, applicationEvenLoadedHandler);
-	 			trace(dmEvt.result.toXMLString());
+	 			//trace(dmEvt.result.toXMLString());
 	 			cretDat(dmEvt.result);
 	 		}
 	 		
@@ -100,11 +104,15 @@
                 if( !ds.hasFormat("treeItems") ) return;     // no useful data
 
                 var items:Array = ds.dataForFormat("treeItems") as Array;
-                for(var i:Number=0; i < items.length; i++) {
-
+                for(var i:Number=0; i < items.length; i++) 
+                {
                     var item:XML = XML(items[i]);
-                    if( item.name().toString() == "Object" ) return; // not what we want
-
+                    
+                    if( item.name().toString() == "Object" )
+                    	 return; // not what we want
+                    
+                    if ( item.@enabled[0] == "false") 		
+                    	return;
                 }	  
 	                    
 	        	var newElement:*;
@@ -116,7 +124,6 @@
 	        		 
 	        		 can.addChild(actionsArray[newElement.ID] ); 
 	        	  } 
-	        		 
 	        	  else if (event.dragInitiator is TreeEvents ) 
 	        	  {
 	        	  	newElement = new EventEditorEvents(item, curContainerTypeID);
@@ -175,13 +182,15 @@
 	        		
 	        	}else if(eventsArray[ID])
 	        	{
+	        		trEvents.enabledItem = eventsArray[ID];
+	        		
 	        		if(can.contains(eventsArray[ID]))
 	        			can.removeChild(eventsArray[ID]);
+	        			
 	        		delete eventsArray[ID];
 	        	}
 	        	
-	        	 deleteLines(ID);
-	        	 
+	        	deleteLines(ID);
 	        }
 	        
 	        private function deleteLines(ID:String):void
@@ -273,8 +282,6 @@
 				blDrawLine = false;  //говорим что НЕ рисуем линию
 			
 				createLine(curEvent.ID, msEvt.currentTarget.ID)
-				
-				//dataChanged = true;
 			}
 			
 			private function createLine(evtID:String, actID:String):void
@@ -420,7 +427,9 @@
 				for each(var actID:XML in xmlToTree.E2vdom.Actions.children())
 				{
 					var objAct:EventEditorAction = new EventEditorAction(actID, curContainerTypeID);
+					
 					 actionsArray[objAct.ID] = setListeners4Action(objAct);
+					
 					can.addChild(actionsArray [actID.@ID]);
 				}
 				
@@ -428,8 +437,12 @@
 				for each(var evt:XML in xmlToTree.E2vdom.Events.children())
 				{
 					var objEv:EventEditorEvents = new EventEditorEvents(evt, curContainerTypeID);
+					
 					eventsArray[objEv.ID] = setListeners4Event(objEv);
+					
 					can.addChild(eventsArray[objEv.ID]);
+					
+					trEvents.disabledItem = objEv;
 				}
 				
 				linesArray = [];
@@ -447,9 +460,6 @@
 			}
 	 	]]>
 	 </mx:Script>
-	 
-	 
-	
 	
 	<mx:HDividedBox width="100%" height="100%">
 		
