--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -141,7 +141,7 @@
 		
 		if (!main.contains(btLine))
 		{
-				trace(main.contains(btLine))
+			//	trace(main.contains(btLine))
 			main.addChild(btLine);
 			
 		}
