--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -401,6 +401,8 @@
 					temXML.@Left 		= actionsArray[actID].x;
 					temXML.@State		= actionsArray[actID].State;
 					
+					temXML.appendChild(actionsArray[actID].parametrs);
+					
 					dataToServer.Actions.appendChild(temXML);
 				}
 				
@@ -437,6 +439,7 @@
 			
 			private function cretDat(xmlToTree:XML=null):void
 			{
+				trace(xmlToTree.toXMLString());
 				can.removeAllChildren();
 			
 				actionsArray = [];		
@@ -530,7 +533,7 @@
 		<mx:VDividedBox width="250" height="100%">
         	 <eventEditor:TreeContainer iconFunction="getIcon" id="trContainer" width="100%" height="40%" 
 			 	change="treeContainerChangeHandler(event)" />
-			 <mx:Canvas label="canvas1" width="100%" height="100%" >
+			 <mx:Canvas label="canvas1" width="100%" height="100%"  >
 			    <mx:VBox  width="100%" height="100%" >
 			       <mx:Label text="Current container: selected container" fontWeight="bold"  color="0xFFFFFF"/>
 	                <mx:TabNavigator id="tn"  width="100%" height="100%">
