Create/Edit Application
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1919 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -22,7 +22,7 @@
 	verticalScrollPolicy="off"
 	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*">
 	
-	<mx:Script source="includes/Vdom.as"/>
+	<mx:Script source="vdom.as"/>
 	
 	<mx:Metadata>
 		[ResourceBundle("Application")]
