--- a/IDE/Vdom/vdom/components/edit/Edit.mxml
+++ b/IDE/Vdom/vdom/components/edit/Edit.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas 
+<mx:HDividedBox
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	xmlns:containers="vdom.containers.*"
 	xmlns:editContainers="vdom.components.edit.containers.*"
@@ -17,60 +17,40 @@
 	</mx:Metadata>
 	<mx:Script source="includes/edit.as" />
 	
-	<mx:HDividedBox 
-		verticalScrollPolicy="off" 
-		left="0" right="0" top="0" bottom="0">
+	<editContainers:TypeAccordion id="types"
+		y="100" width="90" minWidth="90" maxWidth="90"
+		dataProvider="{dataManager.listTypes}" dropShadowEnabled="true"/>
 	
-		<editContainers:TypeAccordion id="types" resizeToContent="true"
-			height="100%" y="100" width="90" minWidth="90" maxWidth="90"
-			dataProvider="{dataManager.listTypes}" dropShadowEnabled="true"
-		/>
+		<containers:AdvancedTabNavigator id="mainArea"
+			width="100%" borderStyle="none">			
+			
+			<editContainers:WorkArea id="workArea" label="WYSIWYG" focusEnabled="false"
+				horizontalScrollPolicy="off" verticalScrollPolicy="off"
+				visible="false" />
+				
+			<editContainers:XMLPresentationEditor id="xmlEditor" label="VDOM XML"
+				dropShadowEnabled="true" borderStyle="solid"/>
+			
+		</containers:AdvancedTabNavigator>
+	
+	<mx:VBox 
+		verticalGap="5" 
+		width="200" minWidth="200" minHeight="0" 
+		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  id="panelContainer">
 		
-		<mx:VBox id="main" width="100%" bottom="0" height="100%">
+		<editContainers:AttributesPanel id="attributesPanel"
+			title="OBJECT PROPERTIES" headerHeight="30"
+			acceptLabel="{resourceManager.getString('Application','editor_save')}" 
+			deleteLabel="{resourceManager.getString('Application','editor_delete')}"
+			dataProvider="{dataManager.currentObject}" width="100%" />
 		
-			<containers:AdvancedTabNavigator id="mainArea" width="100%" height="100%" borderStyle="none">			
-				
-				<editContainers:WorkArea id="workArea" label="WYSIWYG" focusEnabled="false"
-					horizontalScrollPolicy="off" verticalScrollPolicy="off" clipContent="true"
-					visible="false" />
-					
-				<editContainers:XMLPresentationEditor id="xmlEditor" label="VDOM XML"
-					dropShadowEnabled="true" borderStyle="solid"/>
-				
-			</containers:AdvancedTabNavigator>
-		<!-- <containers:Toolbar width="100%" type="{editorDataManager.objectDescription}" id="toolbar"/> -->
-		</mx:VBox>
+		<containers:ClosablePanel id="helpPanel" title="Help" 
+			width="100%" >
+			
+			<mx:Text htmlText="{attributesPanel.help}" condenseWhite="true" width="100%" minHeight="0"/>
+			
+		</containers:ClosablePanel>
 		
-		<mx:VBox 
-			verticalGap="5" 
-			width="200" minWidth="200" minHeight="0" height="100%" 
-			verticalScrollPolicy="auto" horizontalScrollPolicy="off" >
-			
-			<editContainers:AttributesPanel id="attributesPanel"
-				title="OBJECT PROPERTIES" headerHeight="30"
-				acceptLabel="{resourceManager.getString('Application','editor_save')}" 
-				deleteLabel="{resourceManager.getString('Application','editor_delete')}"
-				dataProvider="{dataManager.currentObject}" width="100%" />
-			
-			<containers:ClosablePanel id="helpPanel" title="Help" 
-				width="100%" >
-				
-				<mx:Text htmlText="{attributesPanel.help}" condenseWhite="true" width="100%" minHeight="0"/>
-				
-			</containers:ClosablePanel>
-			
-			<!--
-			<containers:ClosablePanel id="pagePanel" title="Pages" width="200">
-			
-				<mx:List id="pageListAAA"
-					labelField="@Name"
-					width="100%" minHeight="0"
-					change="topLevelObjectChange()"/>
-					
-			</containers:ClosablePanel>
-			-->
-			<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" height="100%" /> 					
-			
-		</mx:VBox>
-	</mx:HDividedBox>
-</mx:Canvas>
+		<editContainers:ObjectsPanel id="pageList" title="Pages" y="50" width="100%" height="100%" /> 							
+	</mx:VBox>
+</mx:HDividedBox>
