--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -64,8 +64,9 @@
 		
 	</controls:ControlPanel>
 	
-	<mx:ViewStack id="mainViewStack" width="100%" height="100%" styleName="vdomBackground"
-			dropShadowEnabled="true" borderStyle="solid"  borderColor="#000000">
+	<mx:ViewStack id="mainViewStack"
+		width="100%" height="100%" styleName="vdomBackground"
+		dropShadowEnabled="true" borderStyle="solid"  borderColor="#000000">
 			
 		<main:Main id="mainCanvas" styleName="mainCanvas" width="100%" height="100%" 
 			borderStyle="none"/>
